--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,6 +8,6 @@
     <fragment
         android:id="@+id/profileFragment"
         android:name="yskim.sample.mvvmsampleapp.ui.home.profile.ProfileFragment"
-        android:label="profile_fragment"
+        android:label="Profile"
         tools:layout="@layout/profile_fragment" />
 </navigation>
